force-app/main/default/objects/Candidate_Committee__c/Candidate_Committee__c.object-meta.xml
<CustomObject>
    <description>OpenFEC Candidate Committee Record.</description>
    <label>Candidate Committee</label>
    <nameField>
        <displayFormat>CC-{000000000}</displayFormat>
        <label>Candidate Committee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Committees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>