force-app/main/default/objects/Candidate_Committee__c/fields/CAND_ID__c.field-meta.xml
<CustomField>
    <fullName>CAND_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>OpenFEC Candidate ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>OpenFEC Candidate ID.</inlineHelpText>
    <label>CAND ID</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>