force-app/main/default/objects/Candidate_Committee__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <description>Candidate record in the system.</description>
    <inlineHelpText>Candidate Organization record.</inlineHelpText>
    <label>Candidate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Candidate Committees</relationshipLabel>
    <relationshipName>Candidate_Committees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>