force-app/main/default/objects/Candidate_Committee__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <description>Retrieve Account name field.</description>
    <formula>Candidate__r.Name</formula>
    <inlineHelpText>Candidate Organizational record name.</inlineHelpText>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>