force-app/main/default/objects/Candidate_Committee__c/fields/Import_Date__c.field-meta.xml
<CustomField>
    <fullName>Import_Date__c</fullName>
    <label>Import Date</label>
    <type>DateTime</type>
</CustomField>