force-app/main/default/objects/Candidate_Committee__c/fields/Matched__c.field-meta.xml
<CustomField>
    <fullName>Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Candidate record was found in this system.</description>
    <inlineHelpText>Candidate record was found in this system.</inlineHelpText>
    <label>Matched</label>
    <type>Checkbox</type>
</CustomField>